--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 <body>
   <section>
     <div class="container narrow">
-      <h1>Ardyan - Product Engineer</h1>
-      <p>B. 1994, Jakarta, ID. Based in South Tangerang.</p>
+      <h1>Ardyan - Product Engineer,  Developer.</h1>
+      <p>B. 1994. Based in South Tangerang, Indonesia.</p>
 
-      <a href="mailto:mail@ardyan.ink">mail@ardyan.ink
+      <a href="mailto:hey@ardyan.ink">hey@ardyan.ink
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
           stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
           class="feather feather-arrow-up-right">
