--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 <body>
   <section>
     <div class="container narrow">
-      <h1>Ardyan - Product Engineer,  Developer.</h1>
-      <p>B. 1994. Based in South Tangerang, Indonesia.</p>
+      <h1>> Ardyan</h1>
+      <p>> Product Engineer,  Developer</p>
+      <p>> Based in South Tangerang, +62</p>
 
       <a href="mailto:hey@ardyan.ink">hey@ardyan.ink
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -43,6 +44,7 @@
           <polyline points="7 7 17 7 17 17"></polyline>
         </svg>
       </a>
+<hr />
     </div>
   </section>
 </body>
