--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
       <p>> Product Engineer,  Developer</p>
       <p>> Based in South Tangerang, +62</p>
 
-      <a href="mailto:hey@ardyan.ink">hey@ardyan.ink
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-          class="feather feather-arrow-up-right">
+      <a href="mailto:henlo@ardyan.ink">henlo@ardyan.info
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+          stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right">
           <line x1="7" y1="17" x2="17" y2="7"></line>
           <polyline points="7 7 17 7 17 17"></polyline>
         </svg>
