--- a/index.html
+++ b/index.html
@@ -24,26 +24,43 @@
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <section>
     <div class="container narrow">
-      <h1>> Ardyan</h1>
-      <p>> Product Engineer,  Developer</p>
-      <p>> Based in South Tangerang, +62</p>
-
-      <a href="mailto:henlo@ardyan.ink">henlo@ardyan.info
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-          stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right">
-          <line x1="7" y1="17" x2="17" y2="7"></line>
-          <polyline points="7 7 17 7 17 17"></polyline>
-        </svg>
-      </a>
-<hr />
+      <div class="bg-avatar"></div>
+      <div class="personal-info">
+        <h1>Ardyan</h1>
+        <span class="pill"> Developer</span>
+        <p>I can tell the difference between class and struct, proficiently.</p>
+        <a class="location" href="https://goo.gl/maps/oPqneYeBU9GpiqVH9?coh=178573&entry=tt" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18">
+            <path
+              d="M12 20.8995L16.9497 15.9497C19.6834 13.2161 19.6834 8.78392 16.9497 6.05025C14.2161 3.31658 9.78392 3.31658 7.05025 6.05025C4.31658 8.78392 4.31658 13.2161 7.05025 15.9497L12 20.8995ZM12 23.7279L5.63604 17.364C2.12132 13.8492 2.12132 8.15076 5.63604 4.63604C9.15076 1.12132 14.8492 1.12132 18.364 4.63604C21.8787 8.15076 21.8787 13.8492 18.364 17.364L12 23.7279ZM12 13C13.1046 13 14 12.1046 14 11C14 9.89543 13.1046 9 12 9C10.8954 9 10 9.89543 10 11C10 12.1046 10.8954 13 12 13ZM12 15C9.79086 15 8 13.2091 8 11C8 8.79086 9.79086 7 12 7C14.2091 7 16 8.79086 16 11C16 13.2091 14.2091 15 12 15Z"
+              fill="rgba(113,118,123,1)"></path>
+          </svg>
+          <span>South Tangerang, Indonesia</span>
+        </a>
+      </div>
+      <div class="cta">
+        <a class="button secondary-btn" href="mailto:dev.ardyan@gmail.com">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16">
+            <path
+              d="M3 3H21C21.5523 3 22 3.44772 22 4V20C22 20.5523 21.5523 21 21 21H3C2.44772 21 2 20.5523 2 20V4C2 3.44772 2.44772 3 3 3ZM20 7.23792L12.0718 14.338L4 7.21594V19H20V7.23792ZM4.51146 5L12.0619 11.662L19.501 5H4.51146Z"
+              fill="rgba(101,100,106,1)"></path>
+          </svg>
+          Message
+        </a>
+        <a class="button primary-btn" href="/Ardyan's Resume.pdf" download="">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16">
+            <path
+              d="M13 10H18L12 16L6 10H11V3H13V10ZM4 19H20V12H22V20C22 20.5523 21.5523 21 21 21H3C2.44772 21 2 20.5523 2 20V12H4V19Z"
+              fill="rgba(255,255,255,1)"></path>
+          </svg>
+          Resume
+        </a>
+      </div>
     </div>
   </section>
 </body>
