--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <div class="container narrow">
       <div class="bg-avatar"></div>
       <div class="personal-info">
-        <h1>Ardyan</h1>
+        <h1 class="name">Ardyan</h1>
         <span class="pill"> Developer</span>
-        <p>I can tell the difference between class and struct, proficiently.</p>
+        <p class="about">I can tell the difference between class and struct, proficiently.</p>
         <a class="location" href="https://goo.gl/maps/oPqneYeBU9GpiqVH9?coh=178573&entry=tt" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18">
             <path
